# RCmdLaunch

./: .gitignore  .qmlls.ini  CMakeLists.txt  ICON_NEEDED.md  LICENSE  Main.qml  OutputDialog.qml  README.md  README_Tray.md  TrayManager.h  commandmanager.cpp  commandmanager.h  main.cpp  resources.qrc
.cache/clangd/index/: TrayManager.h.E41027F7704402FA.idx  commandmanager.h.4CAA2C6952F1C38B.idx
src/cpp/: TrayManager.cpp  commandmanager.cpp  commandmanager.h  main.cpp
src/layout/: EditDialog.qml  Main.qml  OutputDialog.qml
src/res/: app.rc  resources.qrc
